--- a/templates/inscription.twig
+++ b/templates/inscription.twig
@@ -5,7 +5,7 @@
 {% block content %}
 	<div class="container">
 		<div class="row">
-			<div class="col-6">
+			<div class="col-7">
 				<form action="../register.php" method="post">
 					<div class="mb-3">
 						<label for="exampleInputEmail1" class="form-label">Adresse email <span class="text-danger">*</span></label>
@@ -26,6 +26,7 @@
 					</div>
 					<button type="submit" class="btn btn-primary">Envoyer</button>
 				</form>
+				<div id="errorpassword" class="mt-3"></div>
 			</div>
 			<p class="mt-3">Déja inscrit ?
 				<a href="/connexion.php">Connectez-vous ici</a>
