--- a/templates/include/header.twig
+++ b/templates/include/header.twig
@@ -27,6 +27,9 @@
 						<a class="nav-link px-lg-3 py-3 py-lg-4" href="/deconnexion.php">Déconnexion</a>
 					</li>
 				{% endif %}
+				<li class="nav-item">
+					<a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact.php">Me contacter</a>
+				</li>
 			</ul>
 		</div>
 	</li>
