--- a/templates/addPost.twig
+++ b/templates/addPost.twig
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
 	<div class="col-6">
+	<h1>Ajouter un Post</h1>
 		<form action="../addPost.php" method="post" enctype="multipart/form-data">
 			<div class="mb-3">
 				<label for="" class="form-label">Titre du post</label>
