--- a/templates/updatePost.twig
+++ b/templates/updatePost.twig
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
 	<div class="col-6">
+		<h1>Modifier le post</h1>
 		<form method="post" enctype="multipart/form-data">
 			<div class="mb-3">
 				<label for="" class="form-label">Titre du post</label>
