--- a/templates/contact.twig
+++ b/templates/contact.twig
@@ -1,6 +1,7 @@
 {% extends 'base.twig' %}
 {% block content %}
   <div class="row">
+  <h2>Me contacter</h2>
     <div class="col-6">
       <form action="" method="post">
         <div class="form-group">
