--- a/templates/postByCategorie.twig
+++ b/templates/postByCategorie.twig
@@ -8,7 +8,7 @@
 				{% for post in postTrie %}
 					<!-- Post preview-->
 					<div class="post-preview" style="background-color: aliceblue">
-						<a href="showPost.php?idPost={{ post.idPost }}">
+						<a href="showPost.php?idPost={{ post.id }}">
 							<h2 class="post-title">{{ post.titre }}</h2>
 							<h3 class="post-subtitle">{{ post.chapo }}</h3>
 						</a>
@@ -16,7 +16,7 @@
 							Posted by
 							<a href="#">{{ user.getpseudo(post.idAuthor) }}</a>
 							on
-							{{ post.dateCreation }}
+							{{ post.dateCreation |date('d-m-Y H:i:s') }}
 						</p>
 					</div>
 					<hr class="my-4"/>
